scripts/gtopt_check_pampl/examples/errors/missing_name.pampl
# =============================================================================
# Error: Missing constraint name
# =============================================================================
# The 'constraint' keyword requires a name identifier.

constraint : generator('G1').generation <= 100;
